# Seneca2016-2017_Fall_IPC144

./: README.md
w1/: .w1.c.swp  reflect.txt  w1  w1.c  w1a  w1a.c
w10/: README.md  Workshop10.docx
w10/at_home/: output.txt  reflect.txt  w10_at_home  w10_at_home.c  w10_at_home_1.c
w10/in_lab/: in_lab.vcxproj  output.txt  w10_in_lab  w10_in_lab.c  workshop10a_starter
w2/: README.md  Workshop2.docx
w2/at_home/: diff.txt  ipc_w2_home_corr.txt  output.txt  piggybank.c  reflect.txt  w2
w2/in_lab/: diff.txt  in_lab.vcxproj  in_lab.vcxproj.filters  ipc_w2_home_corr.txt  ipc_w2_lab_corr.txt  output.txt  piggybank  piggybank.c  reflect.txt
w3/: README.md  Workshop3.docx
w3/at_home/: .marks.c.swo  .marks.c.swp  at_home.vcxproj  diff.txt  ipc_w3_home_corr.txt  marks  marks.c  output.txt  reflect.txt
w3/in_lab/: diff.txt  in_lab.vcxproj.filters  ipc_w3_lab_corr.txt  marks.c  output.txt  runws
w4/: README.md  Workshop4.docx
w4/at_home/: .marks.c.swn  .marks.c.swo  .marks.c.swp  at_home.vcxproj  diff.txt  ipc_w4_home_corr.txt  marks  marks.c  output.txt  reflect.txt
w4/in_lab/: diff.txt  in_lab.vcxproj  ipc_w4_lab_corr.txt  marks.c  output.txt  runws
w5/: README.md  Workshop5.docx
w5/at_home/: diff.txt  (+7 more)
w6/: README.md  Workshop6.docx
w7/: README.md  Workshop7.docx
w8/: README.md  Workshop08.docx
w8/home/: 244_w8_home_correct_output.txt  244_w8_home_prof.cpp  Account.cpp  Account.h  CMakeLists.txt  CheckingAccount.cpp  CheckingAccount.h  SavingsAccount.cpp  SavingsAccount.h  diff.txt  reflect.txt  w8_at_home.cpp  ws
w9/: README.md  Workshop9.docx
(+74 files in other folders)
